update `read me`, fixed one layout bug.

--- a/public/stylesheets/app/contact.less
+++ b/public/stylesheets/app/contact.less
@@ -79,6 +79,7 @@
 
     .contact-submit {
       position: absolute;
+      border-radius: 0;
       bottom: 10%;
       height: 10%;
       background-color: #39a9a4;
