--- a/public/stylesheets/app/main.less
+++ b/public/stylesheets/app/main.less
@@ -85,6 +85,7 @@ h4 {
 
 .form-control {
   border: none;
+  border-radius: 0;
   padding: 1em;
   font-size: 1.2em;
   background: #eeeeee;
